...
                                        viewModel.handle(EmailConfirmationViewEvents.JoinExistingVault)
                                    },
                                    text = appString(AppString.join),
                                    isEnabled = !isLoading,
                                    modifier = Modifier
                                        .fillMaxWidth()
                                        .testTag("email-confirmation-join")
                                )
                                NakedButton(
                                    title = appString(AppString.emailSelectionChange),
                                    onClick = {
                                        focusManager.clearFocus()
                                        viewModel.handle(EmailConfirmationViewEvents.StartOver)
...
                                        viewModel.handle(EmailConfirmationViewEvents.ContinueClicked)
                                    },
                                    text = appString(AppString.emailSelectionContinue),
                                    isEnabled = !isLoading,
                                    modifier = Modifier
                                        .fillMaxWidth()
                                        .testTag("email-confirmation-continue")
                                )
                                NakedButton(
                                    title = appString(AppString.emailSelectionChange),
                                    onClick = {
                                        focusManager.clearFocus()
                                        viewModel.handle(EmailConfirmationViewEvents.StartOver)
...
