...
        onClick = onClick,
        modifier = Modifier
            .fillMaxWidth()
            .height(56.dp)
            .border(1.dp, AppColors.BorderColor, shape)
            .testTag(when (provider) {
                EmailProvider.MANUAL -> "signin-email-manual"
                EmailProvider.APPLE -> "signin-apple"
                EmailProvider.GOOGLE -> "signin-google"
            }),
        shape = shape,
        colors = ButtonDefaults.buttonColors(
            containerColor = if (provider != EmailProvider.MANUAL) {AppColors.DarkBlue} else {Color.Transparent},
...
